added star rating to the samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -1677,7 +1677,7 @@
 
 <span class="selector">.star-box i</span><span class="code-item">{</span>
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     font-style: normal;
     font-size: 14px;
     padding-top:2px;
@@ -1686,6 +1686,17 @@
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->
+                                    <p>- Add a star rating system to your article or comment</p>
+                                    <div class="sample-box">
+                                        <div class="star-box">
+                                            <span class="active"></span>
+                                            <span class="active"></span>
+                                            <span class="active"></span>
+                                            <span></span>
+                                            <span></span>
+                                            <i>3/5</i>
+                                        </div><!-- star-box end -->
+                                    </div><!-- sample-box end -->
                                     <h6>_Quotes</h6>
                                     <div class="css-code-box">
 <pre>
@@ -1706,6 +1717,12 @@
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->
+                                    <p>- Write a quote from someone in a &lt;div&gt; with class of <span class="site-color">.double-quotes</span></p>
+                                    <div class="sample-box">
+                                        <div class="double-quotes">
+                                            <strong class="white-color">SamanirA is an awesome framework</strong>
+                                        </div><!-- double-quotes end -->
+                                    </div><!-- sample-box end -->
                                     <h6>_Pagination</h6>
                                     <div class="css-code-box">
 <pre>
