samanira page finished

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -165,7 +165,8 @@
                                 <h4 class="reveal">What are the <strong>defined classes</strong> ?</h4>
                                 <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> every item that we may need to create a web pages is defined in form of categories, We will go through "samanira.css" and see how it is working:</p>
                                 <div class="class-box">
-                                    <h5>#GLOBAL</h5>
+                                    <h5 class="active">#GLOBAL</h5>
+                                    <div class="class-inner-box" style="display:block;">
                                     <h6>_Main Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -259,9 +260,11 @@
 </pre>
                                     </div><!-- css-code-box end -->
                                     <p>- In here we are resetting global selectors and defining the project main properties</p>
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#FORM</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Main Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -678,9 +681,11 @@
                                             <label for="radio2">Sample Radio 2</label>
                                         </div><!-- radio-holder end -->
                                     </div><!-- sample-box end -->
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#BUTTONS</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Main Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -907,9 +912,11 @@
                                             <a class="close" href="javascript:void(0)"></a>
                                         </div><!-- white-bg end -->
                                     </div><!-- sample-box end -->
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#FRAMES</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Main Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -962,11 +969,13 @@
 </pre>                                    
                                     </div><!-- css-code-box end -->
                                     <p>- Define the frame of your project content with <span class="site-color">#wrapper</span> and <span class="site-color">.frame</span></p>
-                                    <p>- Clear float of a box with <span class="site-color">.clearFix</span> or give <span class="site-color">.hasClearFix</span> to it's parent</p>
+                                    <p>- Clear float of a box with <span class="site-color">.clear-fix</span> or give <span class="site-color">.has-clear-fix</span> to it's parent</p>
                                     <p>- Separate your content or boxes with <span class="site-color">.divider</span></p>
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#COMMON</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Page Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -1336,9 +1345,11 @@
                                             has-padding
                                         </div>
                                     </div><!-- sample-box end -->
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#CLASSES</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Schema</h6>
                                     <div class="css-code-box">
 <pre>
@@ -1774,7 +1785,7 @@
 <span class="selector">.pagination ul li.prev a</span><span class="code-item">{</span>background: url('../images/assets/prev.png') no-repeat center center #ffffff;<span class="code-item">}</span>
 <span class="selector">.pagination ul li.next a</span><span class="code-item">{</span>background: url('../images/assets/next.png') no-repeat center center #ffffff;<span class="code-item">}</span>
 
-<span class="selector">.pagination ul li.etc a</span></span><span class="code-item">{</span>
+<span class="selector">.pagination ul li.etc a</span><span class="code-item">{</span>
     width: 25px;
     color: #121212;
     background-color: transparent;
@@ -1949,9 +1960,11 @@
 </pre>                                    
                                     </div><!-- css-code-box end -->
                                     <p>- Some defined classes for google map setup</p>
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#TABLES</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Main Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -2152,9 +2165,11 @@
 </pre>                                    
                                     </div><!-- css-code-box end -->
                                     <p>- You can see the columns in table 1 &amp; 2 example</p>
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#LAYOUT</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Main Styles</h6>
                                     <div class="css-code-box">
 <pre>
@@ -2644,9 +2659,11 @@
                                             </div><!-- section end -->
                                         </div><!-- section-wrapper end -->
                                     </div><!-- sample-box end -->
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                                 <div class="class-box">
                                     <h5>#RESPONSIVE</h5>
+                                    <div class="class-inner-box">
                                     <h6>_Min width: 980px</h6>
                                     <div class="css-code-box">
 <pre>
@@ -3176,6 +3193,7 @@
 </pre>                                    
                                     </div><!-- css-code-box end -->
                                     <p>- All other items are getting responsive</p>
+                                    </div><!-- class-inner-box end -->
                                 </div><!-- class-box end -->
                             </div><!-- defined-classes end --> 
                         </div><!-- main-port-content end -->
