fixed meta and description

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -3,18 +3,18 @@
     <head>
         <title>:: Saman Rashidi ~ SamanirA Framework</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and owner of SamanirA Framework"/>
+        <meta name="description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions. "/>
         <meta charset="UTF-8" />
-        <meta name="theme-color" content="#232323" />
+        <meta name="theme-color" content="#0a9abd" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Saman Rashidi&#039;s Personal Website ~ SamanirA Framework" />
-        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and owner of SamanirA Framework" />
-        <meta property="og:url" content="http://www.samanrashidi.com" />
-        <meta property="og:site_name" content="Saman Rashidi" />
-        <meta property="og:image" content="images/samanrashidi.png" />
+        <meta property="og:title" content="Easy HTML / CSS / JS Framework for Front-end Developers by Saman Rashidi & Samira Salimian" />
+        <meta property="og:description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions. " />
+        <meta property="og:url" content="http://www.samanrashidi.com/samanira" />
+        <meta property="og:site_name" content="SamanirA" />
+        <meta property="og:image" content="http://samanrashidi.com/images/samanira.png" />
         <meta name="author" content="Saman Rashidi" />
-        <link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
+        <link rel="alternate" href="http://www.samanrashidi.com/samanira" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="../favicon.png" />
 
         <!-- CSS Files
