fixed some samanira page issues

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -59,16 +59,16 @@
                         <div class="main-port-content">
                             <div id="about-samanira">
                                 <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
-                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions and plugins.<br />
+                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.<br />
                                 Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a></p>
                                 <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
                                 <p>We have done more than 50 front-end projects such as Website, Landing Page, CMS, CRM and &hellip; in 4 years then we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
                                 <ul class="samanira-ul">
                                     <li>It is open source and easy to understand for changing values and classes based on your project's template</li>
                                     <li>It has the same arrangement for all css properties</li>
-                                    <li>Most of the css classes and javascript functions that you need in projects are defined</li>
+                                    <li>Most of the css classes and javascript functions that you may need are defined</li>
                                     <li>Back-end developers will love you for your code discipline</li>
-                                    <li>Your folders, codes and classes will be same for all projects</li>
+                                    <li>Your folders, codes and classes will be the same for all projects</li>
                                 </ul>
                             </div><!-- about-samanira end -->
                             <div id="setup-samanira">
@@ -159,11 +159,11 @@
 </code>
 </pre>
                                 </div><!-- css-code-box end -->
-                                <p><span class="site-color-2">*</span> If you want to add more property in your css code put them in the "other properties" area</p>
+                                <p><span class="site-color-2">*</span> If you want to add more property in your css code that isn't here put them in the <span class="site-color">"other properties"</span> area</p>
                             </div><!-- arrangement-rules end -->
                             <div id="defined-classes">
                                 <h4 class="reveal">What are the <strong>defined classes</strong> ?</h4>
-                                <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> every item that we may need to create a web pages is defined in form of categories, We will go through "samanira.css" and see how it is working:</p>
+                                <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> every item that we may need to create a web page is defined in form of categories, We will go through "samanira.css" and see how it is working:</p>
                                 <div class="class-box">
                                     <h5 class="active">#GLOBAL</h5>
                                     <div class="class-inner-box" style="display:block;">
@@ -506,7 +506,7 @@
 </pre>                                    
                                     </div><!-- css-code-box end -->
                                     <p>- Put each label and form item (input/textarea/select) in a &lt;div&gt; with class of <span class="site-color">field-holder</span></p>
-                                    <p>- If you want to add icons to your input just wrap it in a &lt;div&gt; with class of form-field-holder and then put your icon in <span class="site-color">.field-icon</span></p>
+                                    <p>- If you want to add icons to your input just wrap it in a &lt;div&gt; with class of <span class="site-color">.form-field-holder</span> and then put your icon in <span class="site-color">.field-icon</span></p>
                                     <p>- <span class="site-color">.reverse-input</span> will change the direction of an input</p>
                                     <p>- <span class="site-color">.textarea-word-tracker</span> will make a textarea with the counting number function in samanira.js</p>
                                     <div class="sample-box">
@@ -515,7 +515,7 @@
                                             <span></span>
                                         </div><!-- textarea-word-tracker end -->
                                     </div><!-- sample-box end -->
-                                    <p>- <span class="site-color">.samanira_secure</span> will be for an input with the type of text and is for preventing form from spamming with bots in front-end side with a function in samanira.js</p>
+                                    <p>- <span class="site-color">.samanira_secure</span> will be for an input with the type of text and it is for preventing form from spamming with bots in front-end side with a function in samanira.js</p>
                                     <h6>_Upload Button</h6>
                                     <div class="css-code-box">
 <pre>
@@ -1474,7 +1474,7 @@
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->
-                                    <p>- Create a custom circle / number / tick bullet points with adding class of it to an &lt;ul&gt; or &lt;ol&gt;</p>
+                                    <p>- Create a custom circle / number / tick bullet points by adding class of it to an &lt;ul&gt; or &lt;ol&gt;</p>
                                     <p>- <span class="site-color">.number-bullet</span> is working with javascript functions in samanira.js </p>
                                     <div class="sample-box">
                                         <ul class="circle-bullet">
@@ -2026,7 +2026,7 @@
                                             </table>
                                         </div>
                                     </div><!-- sample-box end -->
-                                    <p>- Make it scrollable in lower than 980px box's width screens by adding class of <span class="site-color">scrollable</span> to the &lt;div&gt; with class of <span class="site-color">.table</span></p>
+                                    <p>- Make it scrollable in lower than 980px box's width by adding class of <span class="site-color">scrollable</span> to the &lt;div&gt; with class of <span class="site-color">.table</span></p>
                                     <div class="sample-box">
                                         <div class="table scrollable">
                                             <table>
@@ -2057,7 +2057,7 @@
                                             </table>
                                         </div>
                                     </div><!-- sample-box end -->
-                                    <p>- Make it responsive in lower than 980px screens width screens by adding class of <span class="site-color">responsive</span> to the &lt;div&gt; with class of <span class="site-color">.table</span></p>
+                                    <p>- Make it responsive in lower than 980px screens by adding class of <span class="site-color">responsive</span> to the &lt;div&gt; with class of <span class="site-color">.table</span></p>
                                     <div class="sample-box">
                                         <div class="table responsive">
                                             <table>
@@ -2130,11 +2130,11 @@
                                         <div class="div-table">
                                             <div class="row">
                                                 <div class="column">Div Column 1</div><!-- column end -->
-                                                <div class="column">Div Column 1</div><!-- column end -->
+                                                <div class="column">Div Column 2</div><!-- column end -->
                                             </div><!-- row end -->
                                             <div class="row">
                                                 <div class="column">Div Column 1</div><!-- column end -->
-                                                <div class="column">Div Column 1</div><!-- column end -->
+                                                <div class="column">Div Column 2</div><!-- column end -->
                                             </div><!-- row end -->
                                         </div><!-- div-table end -->
                                     </div><!-- sample-box end -->
