added farnazyavarianfar & gaboja projects and also samanira page schema has been setup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="My Personal Website, I'm a Senior Front-end Developer Working in Edoramedia Digital Company"/>
 		<meta charset="UTF-8" />
-		<meta name="theme-color" content="#232323" />
+		<meta name="theme-color" content="#0a9abd" />
 		<meta property="og:locale" content="en_GB" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Saman Rashidi&#039;s Personal Website" />
@@ -235,6 +235,32 @@
 					<div class="my-portfolio">
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
+							<li>
+								<div class="portfolio-layer third-bg">
+								<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Gaboja</h4>
+											<p>Gaboja is an unique searching website that use google API and provide some nice features for the users</p>
+											<a class="bttn has-icon read-more" href="gaboja.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/gaboja-thumb.jpg" alt="Gaboja Website by Saman Rashidi" />
+							</li>
+							<li>
+								<div class="portfolio-layer third-bg">
+								<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Farnaz Yavarianfar</h4>
+											<p>Farnaz Yavarianfar is a professional painter and graduated in Philosophy and Literature from Italy in 2007. She has been learning painting under guidance of Master Taha Behbahani in school of Surrealism Metaphysic since 2009.</p>
+											<a class="bttn has-icon read-more" href="farnaz-yavarianfar.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/farnazyavarianfar-thumb.jpg" alt="Farnaz Yavarianfar Website by Saman Rashidi" />
+							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
 								<a class="close" href="javascript:void(0)"></a>
