--- a/samanira/index.html
+++ b/samanira/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>:: Saman Rashidi ~ SamanirA Framework</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions. "/>
+        <meta name="description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions."/>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#0a9abd" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Easy HTML / CSS / JS Framework for Front-end Developers by Saman Rashidi & Samira Salimian" />
-        <meta property="og:description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions. " />
+        <meta property="og:description" content="an easy HTML / CSS / JS framework for Front-end Developers who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions." />
         <meta property="og:url" content="http://www.samanrashidi.com/samanira" />
         <meta property="og:site_name" content="SamanirA" />
         <meta property="og:image" content="http://samanrashidi.com/images/samanira.png" />
@@ -20,7 +20,6 @@
         <!-- CSS Files
         ================================================== -->
         <link rel="stylesheet" type="text/css" href="../css/samanira.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="../css/framework.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="../css/saman.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="../css/media.css" media="screen" />
@@ -45,21 +44,21 @@
 <!-- ======== Main Content Start ======== -->
 
 
-            <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
+            <div class="specific-portfolio" itemscope itemtype="http://schema.org/SoftwareSourceCode">
                 <div class="potfolio-banner no-textshadow" style="background-image:url(../images/samanira/banner.jpg)">
                     <h1>
                         <img src="../images/samanira.png" alt="Samanira Logo" />
                         <div itemprop="name" class="schema-item">SamanirA Framework</div>
                         <span>by <strong itemprop="author">Saman Rashidi</strong> &amp; <strong itemprop="author" class="site-color-2">Samira Salimian</strong></span>
-                        <a class="bttn site bounce large" href="http://github.com/samanrashidii/samanira" target="_blank">Download Now</a>
+                        <a itemprop="codeRepository" class="bttn site bounce large" href="http://github.com/samanrashidii/samanira" target="_blank">Download Now</a>
                     </h1>
                 </div><!-- portfolio-banner end -->
-                <div class="portfolio-content samanira has-shape shape-4">
+                <div class="portfolio-content samanira has-shape shape-4 has-clear-fix">
                     <div class="frame clearFixAfter">
                         <div class="main-port-content">
                             <div id="about-samanira">
                                 <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
-                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.<br />
+                                <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy <span itemprop="programmingLanguage">HTML</span> / <span itemprop="programmingLanguage">CSS</span> / <span itemprop="programmingLanguage">JS</span> framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions.<br />
                                 Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a>.</p>
                                 <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
                                 <p>We have done more than 50 front-end projects in 4 years and we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
@@ -2415,7 +2414,7 @@
                                     <h6>_Has Columns</h6>
                                     <div class="css-code-box">
 <pre>
-<code>
+<code itemprop="codeSampleType">
 <span class="selector">.has-11-1-column > .section</span><span class="code-item">{</span>
     width: 81.5%;
     margin-left: 3.5%;
