change the width of samanira logo in mobile

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -47,7 +47,7 @@
             <div class="specific-portfolio" itemscope itemtype="http://schema.org/SoftwareSourceCode">
                 <div class="potfolio-banner no-textshadow" style="background-image:url(../images/samanira/banner.jpg)">
                     <h1>
-                        <img src="../images/samanira.png" alt="Samanira Logo" />
+                        <img class="samanira-logo" src="../images/samanira.png" alt="Samanira Logo" />
                         <div itemprop="name" class="schema-item">SamanirA Framework</div>
                         <span>by <strong itemprop="author">Saman Rashidi</strong> &amp; <strong itemprop="author" class="site-color-2">Samira Salimian</strong></span>
                         <a itemprop="codeRepository" class="bttn site bounce large" href="http://github.com/samanrashidii/samanira" target="_blank">Download Now</a>
