fixed some items on samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -707,7 +707,6 @@
     text-align: center;
     padding:10px;
     background-color: #121212;
-    border:2px solid #121212;
     border-radius: 2px;
     -webkit-transition:all .2s ease-in-out;
     -moz-transition:all .2s ease-in-out;
@@ -722,48 +721,38 @@
 <span class="selector">.bttn.white</span><span class="code-item">{</span>
     color:#121212;
     background-color: #ffffff;
-    border-color: #ffffff;
 <span class="code-item">}</span>
 
 <span class="selector">.bttn.white:hover</span><span class="code-item">{</span>
     color:#ffffff;
     background-color: #121212;
-    border-color: #121212;
 <span class="code-item">}</span>
 
-<span class="selector">.bttn.black</span><span class="code-item">{</span>
-    background-color: #000000;
-    border-color: #000000;
-<span class="code-item">}</span>
+<span class="selector">.bttn.black</span><span class="code-item">{</span>background-color: #000000;<span class="code-item">}</span>
 
 <span class="selector">.bttn.black:hover</span><span class="code-item">{</span>
     color:#000000;
     background-color: #ffffff;
-    border-color: #ffffff;
 <span class="code-item">}</span>
 
 <span class="selector">.bttn.site</span><span class="code-item">{</span>
     color:#ffffff;
     background-color: #0a9abd;
-    border-color: #0a9abd;
 <span class="code-item">}</span>
 
 <span class="selector">.bttn.site:hover</span><span class="code-item">{</span>
     color:#0a9abd;
     background-color: #ffffff;
-    border-color: #ffffff;
 <span class="code-item">}</span>
 
 <span class="selector">.bttn.site-2</span><span class="code-item">{</span>
     color:#ffffff;
     background-color: #f55757;
-    border-color: #f55757;
 <span class="code-item">}</span>
 
 <span class="selector">.bttn.site-2:hover</span><span class="code-item">{</span>
     color:#f55757;
     background-color: #ffffff;
-    border-color: #ffffff;
 <span class="code-item">}</span>
 
 <span class="selector">.bttn.has-icon</span><span class="code-item">{</span>
